change netbeans LAF

--- a/kidney_se/nbproject/project.properties
+++ b/kidney_se/nbproject/project.properties
@@ -66,7 +66,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=kidney_se.Kidney_se
+main.class=soft.idea.hospital.kidny2017.se.kidney_se.jf_main_frame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
