--- a/kidney_se/nbproject/project.properties
+++ b/kidney_se/nbproject/project.properties
@@ -41,7 +41,9 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcommon-1.0.0.jar}:\
     ${file.reference.jfreechart-1.0.1.jar}:\
-    ${file.reference.mysql-connector-java-5.0.7-bin.jar}
+    ${file.reference.mysql-connector-java-5.0.7-bin.jar}:\
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
