--- a/kidney_se/nbproject/project.properties
+++ b/kidney_se/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/kidney_se.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.DateChooser.jar=lib/DateChooser.jar
 file.reference.jcalendar-1.3.3.jar=lib\\jcalendar-1.3.3.jar
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.0.jar=lib\\jcommon-1.0.0.jar
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.jfreechart-1.0.1.jar}:\
     ${file.reference.mysql-connector-java-5.0.7-bin.jar}:\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}
+    ${libs.jpa2-persistence.classpath}:\
+    ${file.reference.DateChooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
