--- a/kidney_se/nbproject/project.properties
+++ b/kidney_se/nbproject/project.properties
@@ -45,7 +45,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.0.7-bin.jar}:\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.DateChooser.jar}
+    ${file.reference.DateChooser.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
