--- a/kidney_se/nbproject/project.properties
+++ b/kidney_se/nbproject/project.properties
@@ -30,11 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.DateChooser.jar=lib/DateChooser.jar
+file.reference.gnujaxp.jar=lib\\gnujaxp.jar
 file.reference.jcalendar-1.3.3.jar=lib\\jcalendar-1.3.3.jar
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.0.jar=lib\\jcommon-1.0.0.jar
 file.reference.jfreechart-1.0.1.jar=lib\\jfreechart-1.0.1.jar
+file.reference.junit.jar=lib\\junit.jar
 file.reference.mysql-connector-java-5.0.7-bin.jar=lib\\mysql-connector-java-5.0.7-bin.jar
+file.reference.servlet.jar=lib\\servlet.jar
 file.reference.ValidatorJar_deepalsuranga.jar=lib\\ValidatorJar_deepalsuranga.jar
 includes=**
 jar.compress=false
@@ -48,7 +51,10 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.DateChooser.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.junit.jar}:\
+    ${file.reference.gnujaxp.jar}:\
+    ${file.reference.servlet.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
