--- a/kidney_se/nbproject/project.properties
+++ b/kidney_se/nbproject/project.properties
@@ -1,99 +1,68 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=kidney_se
-application.vendor=deepalsuranga
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# Files in build.classes.dir which should be excluded from distribution jar
-dist.archive.excludes=
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/kidney_se.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+#Mon Feb 13 11:38:12 IST 2017
 excludes=
-file.reference.DateChooser.jar=lib/DateChooser.jar
-file.reference.gnujaxp.jar=lib\\gnujaxp.jar
-file.reference.jcalendar-1.3.3.jar=lib\\jcalendar-1.3.3.jar
-file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
-file.reference.jcommon-1.0.0.jar=lib\\jcommon-1.0.0.jar
-file.reference.jfreechart-1.0.1.jar=lib\\jfreechart-1.0.1.jar
-file.reference.junit.jar=lib\\junit.jar
-file.reference.mysql-connector-java-5.0.7-bin.jar=lib\\mysql-connector-java-5.0.7-bin.jar
-file.reference.servlet.jar=lib\\servlet.jar
-file.reference.ValidatorJar_deepalsuranga.jar=lib\\ValidatorJar_deepalsuranga.jar
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${file.reference.ValidatorJar_deepalsuranga.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcommon-1.0.0.jar}:\
-    ${file.reference.jfreechart-1.0.1.jar}:\
-    ${file.reference.mysql-connector-java-5.0.7-bin.jar}:\
-    ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.DateChooser.jar}:\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.junit.jar}:\
-    ${file.reference.gnujaxp.jar}:\
-    ${file.reference.servlet.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=
 javac.deprecation=false
+file.reference.jcommon-1.0.0.jar=lib\\jcommon-1.0.0.jar
+build.test.results.dir=${build.dir}/test/results
 javac.external.vm=true
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
+run.classpath=${javac.classpath}\:${build.classes.dir}
 javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+javac.processorpath=${javac.classpath}
+javac.target=1.8
+annotation.processing.processors.list=
+javadoc.noindex=false
+javadoc.additionalparam=
+includes=**
+build.classes.dir=${build.dir}/classes
+source.encoding=UTF-8
+javadoc.author=false
+test.src.dir=test
+build.dir=build
+file.reference.jcalendar-1.3.3.jar=lib\\jcalendar-1.3.3.jar
+build.test.classes.dir=${build.dir}/test/classes
+platform.active=default_platform
+javac.compilerargs=
+main.class=soft.idea.hospital.kidny2017.se.kidney_se.fr_loading
+dist.jar=${dist.dir}/kidney_se.jar
+javac.test.processorpath=${javac.test.classpath}
+file.reference.mysql-connector-java-5.0.7-bin.jar=lib\\mysql-connector-java-5.0.7-bin.jar
 javadoc.use=true
+dist.archive.excludes=
+build.sysclasspath=ignore
+debug.test.classpath=${run.test.classpath}
+dist.dir=dist
+file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
+file.reference.gnujaxp.jar=lib\\gnujaxp.jar
+build.classes.excludes=**/*.java,**/*.form
+javadoc.splitindex=true
+javadoc.encoding=${source.encoding}
+javac.source=1.8
+file.reference.jfreechart-1.0.1.jar=lib\\jfreechart-1.0.1.jar
+application.vendor=deepalsuranga
+junit.selected.version=3
+debug.classpath=${run.classpath}
+file.reference.junit.jar=lib\\junit.jar
+run.jvmargs=
+file.reference.servlet.jar=lib\\servlet.jar
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
+build.generated.dir=${build.dir}/generated
+jar.compress=false
+javadoc.private=false
+annotation.processing.run.all.processors=true
+application.title=kidney_se
+meta.inf.dir=${src.dir}/META-INF
+manifest.file=manifest.mf
+annotation.processing.enabled=true
+file.reference.ValidatorJar_deepalsuranga.jar=lib\\ValidatorJar_deepalsuranga.jar
+dist.javadoc.dir=${dist.dir}/javadoc
+src.dir=src
+file.reference.DateChooser.jar=lib/DateChooser.jar
+mkdist.disabled=false
+endorsed.classpath=
+javac.classpath=${file.reference.ValidatorJar_deepalsuranga.jar}\:${file.reference.jcalendar-1.3.3.jar}\:${file.reference.jcalendar-1.4.jar}\:${file.reference.jcommon-1.0.0.jar}\:${file.reference.jfreechart-1.0.1.jar}\:${file.reference.mysql-connector-java-5.0.7-bin.jar}\:${libs.hibernate4-support.classpath}\:${libs.jpa2-persistence.classpath}\:${file.reference.DateChooser.jar}\:${libs.absolutelayout.classpath}\:${file.reference.junit.jar}\:${file.reference.gnujaxp.jar}\:${file.reference.servlet.jar}
+annotation.processing.enabled.in.editor=false
+build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
-main.class=soft.idea.hospital.kidny2017.se.kidney_se.fr_loading
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+javadoc.notree=false
