--- a/kidney_se/nbproject/project.properties
+++ b/kidney_se/nbproject/project.properties
@@ -1,5 +1,6 @@
-#Fri Feb 17 01:18:57 IST 2017
+#Tue Feb 21 17:55:42 IST 2017
 excludes=
+file.reference.mysql-connector-java-5.1.23-bin.jar=lib/mysql-connector-java-5.1.23-bin.jar
 javac.deprecation=false
 file.reference.jcommon-1.0.0.jar=lib\\jcommon-1.0.0.jar
 build.test.results.dir=${build.dir}/test/results
@@ -61,7 +62,21 @@ src.dir=src
 endorsed.classpath=
 mkdist.disabled=false
 annotation.processing.enabled.in.editor=false
-javac.classpath=${file.reference.ValidatorJar_deepalsuranga.jar}\:${file.reference.jcalendar-1.3.3.jar}\:${file.reference.jcalendar-1.4.jar}\:${file.reference.jcommon-1.0.0.jar}\:${file.reference.jfreechart-1.0.1.jar}\:${file.reference.mysql-connector-java-5.0.7-bin.jar}\:${libs.hibernate4-support.classpath}\:${libs.jpa2-persistence.classpath}\:${file.reference.DateChooser.jar}\:${libs.absolutelayout.classpath}\:${file.reference.junit.jar}\:${file.reference.gnujaxp.jar}\:${file.reference.servlet.jar}
+javac.classpath=\
+    ${file.reference.ValidatorJar_deepalsuranga.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcommon-1.0.0.jar}:\
+    ${file.reference.jfreechart-1.0.1.jar}:\
+    ${file.reference.mysql-connector-java-5.0.7-bin.jar}:\
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}:\
+    ${file.reference.DateChooser.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.junit.jar}:\
+    ${file.reference.gnujaxp.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
